# docs/swagger.json
@@ -557,6 +557,68 @@
                 }
             }
         },
+        "/clients/me/password": {
+            "put": {
+                "description": "Updates the password for the authenticated client.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Update Client Password",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer {token}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "New password data",
+                        "name": "newPassword",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ResetPasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/clients/me/transactions": {
             "get": {
                 "description": "Gets the transaction history of the authenticated client.",
@@ -1724,6 +1786,60 @@
                 }
             }
         },
+        "/establishments/{establishmentID}": {
+            "get": {
+                "description": "Gets an establishment by its ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Establishments"
+                ],
+                "summary": "Get Establishment by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer {token}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Establishment ID",
+                        "name": "establishmentID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.EstablishmentResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/establishments/{establishmentID}/clients": {
             "get": {
                 "description": "Gets all clients associated with an establishment. Only Admins can access this endpoint.",
@@ -1894,53 +2010,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/establishments/{id}": {
-            "get": {
-                "description": "Gets an establishment by its ID.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Establishments"
-                ],
-                "summary": "Get Establishment by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Establishment ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.EstablishmentResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -3069,6 +3138,69 @@
                 }
             }
         },
+        "/users/email-to-id": {
+            "get": {
+                "description": "Retrieves the ID of a user by their email address. This endpoint is typically for internal use or admin purposes.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get User ID by Email",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer {token}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's email address",
+                        "name": "email",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "integer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid email format",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden (only for admins)",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "description": "Retrieves a user by their ID. Admins can retrieve any user, Clients can only retrieve themselves.",
@@ -3507,8 +3639,7 @@
                 },
                 "late_fee_percentage": {
                     "description": "Optional, can be set later",
-                    "type": "number",
-                    "minimum": 0
+                    "type": "number"
                 },
                 "name": {
                     "type": "string"
@@ -3572,8 +3703,7 @@
                     "$ref": "#/definitions/enums.InterestType"
                 },
                 "late_fee_percentage": {
-                    "type": "number",
-                    "minimum": 0
+                    "type": "number"
                 },
                 "monthly_due_date": {
                     "type": "integer",
@@ -3644,9 +3774,7 @@
                     "type": "string"
                 },
                 "late_fee_percentage": {
-                    "description": "Optional, can be set later",
-                    "type": "number",
-                    "minimum": 0
+                    "type": "number"
                 },
                 "name": {
                     "type": "string"
@@ -3690,7 +3818,7 @@
             ],
             "properties": {
                 "category": {
-                    "$ref": "#/definitions/enums.ProductCategory"
+                    "type": "string"
                 },
                 "description": {
                     "type": "string"
@@ -3827,8 +3955,7 @@
                     "type": "boolean"
                 },
                 "late_fee_percentage": {
-                    "type": "number",
-                    "minimum": 0
+                    "type": "number"
                 },
                 "monthly_due_date": {
                     "type": "integer",
@@ -3857,8 +3984,7 @@
                 },
                 "late_fee_percentage": {
                     "description": "Optional",
-                    "type": "number",
-                    "minimum": 0
+                    "type": "number"
                 },
                 "name": {
                     "type": "string"
@@ -4126,6 +4252,9 @@
                 },
                 "admin": {
                     "$ref": "#/definitions/response.UserResponse"
+                },
+                "admin_id": {
+                    "type": "integer"
                 },
                 "created_at": {
                     "type": "string"
